libs/@local/hashql/ast/tests/ui/lower/type-extractor/definition/infer-with-arguments.jsonc
//@ run: fail
//@ description: Tests rejection of underscore with explicit type arguments
[
  "type",
  "InvalidInfer<T>",
  //~^ ERROR Generic parameter `T` declared here...
  "_",
  "_"
]
